[package]
name = "disk"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
filesize = "0.2"
fs_extra ="1.2.0"
filetime = "0.2"
chrono = "0.4.23"
gio = "0.9.1"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24"]



